--- a/src/app/shared/components/news-card/news-card.component.html
+++ b/src/app/shared/components/news-card/news-card.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['noticias/' + noticia.reference]">
+<a [routerLink]="['/noticias/' + noticia.reference]">
 <mat-card class="news-card">
     <img appResize [ngWidth]="400" class="news-card-img" mat-card-image
     ngSrc="{{noticia.imageUrl}}" alt="Foto de Noticia"
