--- a/src/app/shared/components/event-card-short/event-card-short.component.css
+++ b/src/app/shared/components/event-card-short/event-card-short.component.css
@@ -5,7 +5,7 @@
 
 .text-on-image {
   position: absolute;
-  bottom: 25px;
+  top: 170px;
   right: 40px;
   text-align: right;
   font-size: 1.2rem;
