--- a/src/app/shared/components/event-card-short/event-card-short.component.html
+++ b/src/app/shared/components/event-card-short/event-card-short.component.html
@@ -7,19 +7,19 @@
         class="event-card-img"
         [ngClass]="{'primary-filter': hasPrimaryColorIndex, 'secondary-filter': !hasPrimaryColorIndex}"
       />
-      <p class="text-on-image ieeextreme-text">
-        {{ event.titleCode | translate }}
-      </p>
       <div class="date-container">
         <div *ngIf="event.dates[0].date == null; else date" class="date-inner-container">
         </div>
         <ng-template #date>
           <div class="date-inner-container">
             <span *ngIf="!event.dates[0].showMonth">{{ event.dates[0].date.getDate() }}</span>
-            {{ event.dates[0].date.toLocaleString(locale(), { month: 'long' })}}
+            {{ capitalizeFirstLetter(event.dates[0].date.toLocaleString(locale(), { month: 'long' })) }}
           </div>
         </ng-template>
       </div>
+      <p class="text-on-image">
+        {{ event.titleCode | translate }}
+      </p>
     </div>
   </mat-card>
 </a>
