--- a/src/app/modules/write-news/pages/write-news/write-news.component.css
+++ b/src/app/modules/write-news/pages/write-news/write-news.component.css
@@ -4,12 +4,183 @@ html {
 }
 
 body {
-    padding: 10%;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-    background-size: cover;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  padding: 10% 5%;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
+  background-size: cover;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 	padding-top: 160px;
+}
+
+/* Extra styles for preview */
+
+.topbottomLine {
+  padding-top: 5vmin;
+  padding-bottom: 5vmin;
+  border-top: whitesmoke 2px solid;
+  border-bottom: whitesmoke 2px solid;
+  vertical-align: middle;
+  align-content: center;
+}
+
+.notopbottomLine {
+  padding-top: 5vmin;
+  padding-bottom: 5vmin;
+  border-top: whitesmoke 0px solid;
+  border-bottom: whitesmoke 0px solid;
+  vertical-align: middle;
+  align-content: center;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.half-width {
+  width: 50%;
+}
+
+.preview-card {
+  flex-grow: 1;
+  padding: 2rem 0;
+}
+
+.preview-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10%;
+}
+
+.preview-title {
+  font-family: Calibri, sans-serif;
+  color: #373a3c;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 40px;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.news-tags {
+  margin-bottom: 1rem;
+}
+
+.news-tag {
+  background-color: rgb(0, 98, 155) !important;
+  font-size: 1rem;
+  padding: 1rem;
+}
+
+.short-intro-text {
+  font-size: 1rem;
+  color: rgb(102.4, 102.4, 102.4);
+  text-align: justify;
+  text-justify: inter-word;
+  margin: 0;
+}
+
+.preview-image {
+  border: 1px solid;
+  margin-top: 1.5rem;
+}
+
+.preview-epigraph {
+  margin-top: 0.2rem;
+  font-size: 1rem;
+}
+
+.preview-author-date-container {
+  display: inline-flex;
+  gap: 0.3rem;
+  align-items: center;
+  font-size: 1rem;
+  margin: 1rem 0;
+  padding-left: 0.5rem;
+  border-left: 3px solid rgb(0, 98, 155);
+  color: rgb(51 51 51);
+}
+
+.preview-date-container {
+  display: inline-flex;
+  gap: 0.5rem;
+}
+
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+  background-color: rgb(0, 98, 155) !important;
+}
+
+::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle, .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple), .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple, .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple {
+  background-color: rgb(0, 98, 155) !important;
+}
+
+::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+  border-color: rgb(0, 98, 155) !important;
+}
+
+.upload-button {
+  text-align: center;
+  color: white;
+  background-color: rgb(0, 98, 155);
+}
+
+.content-text {
+  /* color:#ffffff; */
+  color: rgb(102.4, 102.4, 102.4);
+  width: 90%;
+  text-align: justify;
+  text-justify: inter-word;
+  line-height: 30px;
+  max-width: 850px;
+  font-size: 20px;
+}
+
+.add-margin{
+  margin:20px;
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
+.blog-image{
+  max-width: 700px;
+}
+
+.roundedBlock{
+  border-radius: 5vmin;
+}
+
+.whitetext-photo-text{
+  /* color:#ffffff; */
+  font-size:15px;
+  text-align: left;
+  margin:10px;
+}
+
+.author-text{
+  font-size:20px;
+  color:rgb(90, 90, 90);
+  /*color: #ffffff;*/
+  margin:20px;
+  max-width:850px;
+}
+
+.word-break{
+  word-wrap:break-word;
+
+  word-break: break-word;
+}
+
+/*****************************/
+
+.i {
+  line-height: 0;
+}
+
+.editor-container {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
 .whiteRoundedBlock{
@@ -21,10 +192,11 @@ body {
 .page-title {
     color: #0d47a1;
 	font-size: 2.5em;
+  margin: 0;
 }
 
-.topbottomLine { 
-    padding-top: 15px;
+.topbottomLine {
+    padding: 15px 0;
     border-top:#0d47a1 2px solid;
     border-bottom: #0d47a1 2px solid;
     vertical-align: middle;
@@ -32,8 +204,7 @@ body {
 }
 
 .bottomLine {
-    padding-top: 5vmin;
-    padding-bottom: 5vmin;
+    padding: 5vmin 0;
     border-bottom: whitesmoke 2px solid;
     vertical-align: middle;
     align-content: center;
