fix(news-page): shortIntro text now properly displayed

--- a/src/app/modules/noticias/pages/noticia/noticia.component.html
+++ b/src/app/modules/noticias/pages/noticia/noticia.component.html
@@ -35,7 +35,7 @@
 
             <div fxLayoutAlign="center center" fxLayout="column">
                 <div fxLayoutAlign="center center" fxLayout="column">
-                    <p class="add-margin author-text word-break">{{(newsData | async).shortIntro}}</p>
+                    <p class="add-margin author-text word-break" [innerHtml]="(newsData | async).shortIntro"></p>
                 </div>
             </div>
 
