New Emb page (#38)
* pagina de EMB

* chore(emb): update page content and i18n

* feat: created directive for image resizing

* fix: add missing team member

* pagina de EMB

* edit style sheet

* Equipo de EMB

* linkedin y mail de emb team

* linkedins de emb

---------

Co-authored-by: santiagoBassi <santiagobassi21@gmail.com>
Co-authored-by: Saul Castañeda <scastaneda@itba.edu.ar>
Co-authored-by: sh1ft <31477929+Federico-Shih@users.noreply.github.com>

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -86,6 +86,7 @@
   <button mat-menu-item [routerLink]="['/ras']">RAS</button>
   <button mat-menu-item onclick="window.location.href = 'https://csitba.web.app/'">CS</button>
   <button mat-menu-item [routerLink]="['/wie']">WIE</button>
+  <button mat-menu-item [routerLink]="['/emb']">EMB</button>
 </mat-menu>
 
 <mat-menu #menu="matMenu" xPosition="before" yPosition="below">
