chore: removed sponsors from asimov cup event

--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -131,7 +131,7 @@
       </mat-accordion>
     </div>
 
-    <div class="sponsor-section" id="sponsorship">
+    <div *ngIf="sponsorsServiceVar.getAsimovSponsors().length > 0" class="sponsor-section" id="sponsorship">
       <h2 class="section-title">{{ "ASIMOVCUP.SPONSORS" | translate }}</h2>
       <br>
       <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getAsimovSponsors()"></app-sponsor-component>
