chore: add conditional rendering to sponsors component

--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -131,10 +131,10 @@
       </mat-accordion>
     </div>
 
-    <div *ngIf="sponsorsServiceVar.getAsimovSponsors().length > 0" class="sponsor-section" id="sponsorship">
+    <div *ngIf="sponsors.length > 0" class="sponsor-section" id="sponsorship">
       <h2 class="section-title">{{ "ASIMOVCUP.SPONSORS" | translate }}</h2>
       <br>
-      <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getAsimovSponsors()"></app-sponsor-component>
+      <app-sponsor-component [currentsponsor]="sponsors"></app-sponsor-component>
     </div>
 
     <app-footer></app-footer>
