--- a/src/app/shared/components/news-card/news-card.component.html
+++ b/src/app/shared/components/news-card/news-card.component.html
@@ -5,7 +5,7 @@
     >
     <mat-card-content class="news-card-content">
         <mat-card-title class="clamp">{{ noticia.title }}</mat-card-title>
-        <mat-card-subtitle class="clamp">{{ noticia.author }}</mat-card-subtitle>
+        <mat-card-subtitle class="clamp align-end">{{ noticia.author }}</mat-card-subtitle>
     </mat-card-content>
 </mat-card>
 </a>
