--- a/src/app/core/authentication/login/login.component.css
+++ b/src/app/core/authentication/login/login.component.css
@@ -3,13 +3,13 @@ html {
     height: auto;
 }
 
-body {
-    padding: 10%;
+.login-container {
     background: rgb(255, 255, 255);
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
-	padding-top: 160px;
+    width: 100vw !important;
+    height: 100vh !important;
 }
 
 h1{
@@ -26,7 +26,7 @@ hr {
     border-color: whitesmoke;
 }
 
-a{ 
+a{
     font-weight: 100;
 }
 
@@ -39,45 +39,17 @@ a:hover{
 }
 
 .mainFrame {
-    background-color:  rgba(144, 144, 144, 0.2);
-    padding: 3%;
-    border-radius: 30px;
-    padding: 3vmin;
-    margin-top: 3vmin;
-    margin-left: 8em;
-    margin-right: 8em;
 }
 
-input{
-    width: 100%;
-    height: 30pt;
-    margin-bottom: 2vmin;
-    border-radius: 30px;
-    padding: 2vmin;
-    font-size: 15pt;  
+input {
+    font-size: 1.3em;
 }
 
-input::placeholder{
-    color: #0d47a1;
+.login-button {
+  width: 100%;
+  background-color: #00629B;
+  font-size: 1.4em;
 }
-
-button{
-    font-size: 15pt;
-    border: solid #0d47a1 1px;
-    color: #0d47a1;
-    border-radius: 25px;
-    padding-left: 10pt;
-    padding-right: 10pt;
-    text-align: center;
-    transition: all ease 0.5s;
-}
-
-button:hover {
-    background-color: #0d47a1 ;
-    color: whitesmoke;
-    border-color: whitesmoke;
-}
- 
 
 #passerr{
     font-size: 13pt;
@@ -85,7 +57,11 @@ button:hover {
     text-align: right;
 }
 
-.topbottomLine { 
+.login-card-content {
+  width: 80%;
+}
+
+.topbottomLine {
     border-top:#0d47a1 2px solid;
     border-bottom: #0d47a1 2px solid;
     vertical-align: middle;
@@ -101,11 +77,11 @@ button:hover {
     /*change color of label*/
     color:  #0d47a1 !important;
    }
-  
+
 ::ng-deep.mat-form-field-underline {
 /*change color of underline*/
 background-color:  #0d47a1 !important;
-} 
+}
 
 ::ng-deep.mat-form-field-ripple {
 /*change color of underline when focused*/
