--- a/src/app/core/authentication/register/register.component.html
+++ b/src/app/core/authentication/register/register.component.html
@@ -8,62 +8,53 @@
 <header>
   <app-navbar></app-navbar>
 </header>
-<body>
-  <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm pt-1 pb-1 d-flex justify-content-center" >
-                <h1 class="page-title">{{ 'REGISTER.TITLE' | translate }}</h1>
-            </div>
-        </div>
-    </div>
+<body class="login-container overflow-hidden">
+
+
+<div class="row" style="height: 100%">
+  <div class="col-lg-4 col-md-0 col-sm-0 h-100 w-100 d-sm-none d-md-none d-lg-flex align-items-center justify-content-center mt-4 "
+       style="background-color: #00629B"
+  >
+    <img alt="itbot" src="./assets/image/login/itbot.png" class="h-50"/>
   </div>
-  <div class="row d-flex justify-content-center">
-    <div>
-      <div class="mainFrame">
-
-        <div class="row">
-        <form id="singup-form">
-
-
-            <div class="inputField">
-              <mat-form-field class="example-full-width" style="width:50vw">
-                <mat-label for="fname">{{ 'REGISTER.FIRST_NAME' | translate }}:</mat-label>
-                <input type="text" id="fname" required matInput>
-              </mat-form-field>
-            </div>
-            <div class="inputField">
-              <mat-form-field class="example-full-width" style="width:50vw">
-                <mat-label for="lname">{{ 'REGISTER.LAST_NAME' | translate }}:</mat-label>
-                <input type="text" id="lname" required matInput>
-              </mat-form-field>
-            </div>
-            <div class="inputField">
-              <mat-form-field class="example-full-width" style="width:50vw">
+  <div class="mainFrame col-lg-8 col-md-12" style="padding-top: 160px">
+    <div class="row d-flex flex-column align-items-center justify-content-center">
+      <mat-card class="d-flex flex-column align-items-center" style="width: 500px">
+        <mat-card-header>
+          <mat-card-title>
+            {{ 'REGISTER.TITLE' | translate }}
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="login-card-content">
+          <form id="singup-form">
+              <div class="row w-100">
+                <div class="col-6">
+                  <mat-form-field class="w-100">
+                    <mat-label for="fname">{{ 'REGISTER.FIRST_NAME' | translate }}:</mat-label>
+                    <input type="text" id="fname" required matInput>
+                  </mat-form-field>
+                </div>
+                <div class="col-6">
+                  <mat-form-field class="w-100">
+                    <mat-label for="lname">{{ 'REGISTER.LAST_NAME' | translate }}:</mat-label>
+                    <input type="text" id="lname" required matInput>
+                  </mat-form-field>
+                </div>
+              </div>
+              <mat-form-field class="w-100">
                 <mat-label for="email">{{ 'REGISTER.EMAIL' | translate }}:</mat-label>
                 <input type="email" id="email" required matInput>
               </mat-form-field>
-            </div>
-            <div class="inputField">
-              <mat-form-field class="example-full-width" style="width:50vw">
+              <mat-form-field class="w-100">
                 <mat-label for="pass">{{ 'REGISTER.PASSWORD' | translate }}:</mat-label>
                 <input type="password" id="pass" required matInput>
               </mat-form-field>
-            </div>
-            <div class="inputField">
-              <mat-form-field class="example-full-width" style="width:50vw">
+              <mat-form-field class="w-100">
                 <mat-label for="passConf">{{ 'REGISTER.REPEAT_PASSWORD' | translate }}:</mat-label>
                 <input type="password" id="passConf" required matInput>
               </mat-form-field>
-            </div>
-
-            <div class="inputField d-flex justify-content-center">
-              <div class="row">
-                <div class=" row d-flex justify-content-center">
-                  <button type="submit">{{ 'REGISTER.BUTTON' | translate }}</button>
-                </div>
-
-              </div>
+            <div class="row d-flex justify-content-center">
+              <button mat-raised-button class="login-button" color="primary" type="submit">{{ 'REGISTER.BUTTON' | translate }}</button>
             </div>
 
             <div class="row d-flex justify-content-center">
@@ -74,7 +65,7 @@
 
               <button class="smallbutton" (click)="chgpass()">Change Password</button>
 
-              <mat-form-field id="changepass" class="example-full-width" style="width:50vw">
+              <mat-form-field id="changepass" class="w-100">
                 <mat-label for="emailchange">New Password</mat-label>
                 <input type="email"  [hidden]="isHidden" placeholder="e-mail" id="emailchange" required matInput>
               </mat-form-field>
@@ -86,14 +77,16 @@
             </div>
 
 
-            <div class="row d-flex justify-content-center mt-4">
+            <div class="row d-flex justify-content-center mt-3">
               <div class="mr-2 blue-font">{{ 'REGISTER.ALREADY_SIGNED_UP' | translate }}</div>
-              <button class="smallbutton" [routerLink]="['/login']">{{ 'REGISTER.LOGIN' | translate }}</button>
+              <a [routerLink]="['/login']">{{ 'REGISTER.LOGIN' | translate }}</a>
             </div>
-        </form>
-        </div>
-      </div>
+          </form>
+        </mat-card-content>
+      </mat-card>
+
     </div>
   </div>
+</div>
 </body>
 </html>
