--- a/src/app/shared/components/event-card-short/event-card-short.component.css
+++ b/src/app/shared/components/event-card-short/event-card-short.component.css
@@ -3,10 +3,16 @@
   width: 100%;
 }
 
-.text-on-image {
+.text-position {
   position: absolute;
   top: 170px;
   right: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.text-on-image {
   text-align: right;
   font-size: 1.2rem;
   font-weight: 900;
@@ -71,6 +77,7 @@
   padding: 3px 10px 0 20px;
   text-align: right;
   gap: 5px;
+  width: auto;
 }
 
 .date-container {
@@ -105,7 +112,7 @@
 
 @media (max-width: 400px) {
   .text-on-image {
-    font-size: 2rem;
+    font-size: 1rem;
   }
 }
 
