--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -11,7 +11,7 @@
 </header>
 <body class="login-container overflow-hidden">
   <div class="row" style="height: 100%">
-    <div class="mainFrame col-lg-8 col-md-12" style="padding-top: 160px">
+    <div class="mainFrame col-lg-8 col-md-6 col-12" style="padding-top: 160px">
       <div class="row d-flex flex-column align-items-center justify-content-center">
         <mat-card class="d-flex flex-column align-items-center">
           <mat-card-header>
@@ -35,19 +35,23 @@
                 </button>
               </div>
 
-              <h4 id="passerr" [hidden]="isHidden"></h4>
+              <h4 *ngIf="loginResponse != null"
+                   id="passerr"
+                   [class]="{ 'success': loginResponse.success, 'error': !loginResponse.success}"
+              >
+                  {{ loginResponse.message | translate }}
+              </h4>
               <div class="row d-flex justify-content-center mt-3">
                 <h4>{{ 'LOGIN.NO_ACCOUNT' | translate }}</h4>
                 <a class="ml-2" href="/register">{{ 'LOGIN.SIGN_UP' | translate }}</a>
               </div>
             </form>
-
           </mat-card-content>
         </mat-card>
 
       </div>
     </div>
-    <div class="col-lg-4 col-md-0 col-sm-0 h-100 w-100 d-sm-none d-md-none d-lg-flex align-items-center justify-content-center mt-4 "
+    <div class="col-lg-4 col-md-6 h-100 w-100 d-none d-md-flex align-items-center justify-content-center mt-4 "
          style="background-color: #00629B"
     >
       <img alt="itbot" src="./assets/image/login/itbot.png" class="h-50" style="transform: scaleX(-1)"/>
