--- a/src/app/core/authentication/register/register.component.css
+++ b/src/app/core/authentication/register/register.component.css
@@ -1,151 +1,97 @@
 html {
-    min-height: 100%;
-    height: auto;
+  min-height: 100%;
+  height: auto;
 }
 
-body {
-    padding: 10%;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-    background-size: cover;
-    font-family: 'Roboto', Arial, Helvetica, sans-serif;
-	padding-top: 160px;
+.login-container {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
+  background-size: cover;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  width: 100vw !important;
+  height: 100vh !important;
 }
 
-h1 {
-    padding-left: 5vmin;
-    padding-right: 5vmin;
-    font-size: 5.5vw;
-    line-height: 5.5vw;
+h1{
+  font-size: 30pt;
 }
 
-.white-font {
-    color: whitesmoke;
+h3{
+  font-size: 15pt;
+  text-align: center;
+  color: whitesmoke;
 }
 
-h2 {
-    padding-left: 5vmin;
-    padding-right: 5vmin;
-    font-size: 4.5vw;
-    line-height: 4.5vw;
-    padding-bottom: 1vmin;
-    font-weight: 100;
+hr {
+  border-color: whitesmoke;
 }
 
-h3 {
-    font-size: 2.5vw;
-    margin-bottom: 0;
+a{
+  font-weight: 100;
 }
 
-h4 {
-    font-size: 2.5vw;
-    text-align: right;
-    font-weight: 100;
+a:any-link{
+  color: rgb(20, 82, 255);
 }
 
-input{
-    width: 100%;
-    height: 30pt;
-    margin-bottom: 2vmin;
-    border-radius: 30px;
-    padding-left: 2vmin;
-    padding-right: 2vmin;
-    font-size: 20pt;
-}
-
-label{
-    font-size: 15pt;
-}
-
-button{
-    font-size: 15pt;
-    border: solid #0d47a1 1px;
-    color: #0d47a1;
-    border-radius: 25px;
-    padding-left: 10pt;
-    padding-right: 10pt;
-    text-align: center;
-    transition: all ease 0.5s;
-}
-
-button:hover {
-    background-color: #0d47a1 ;
-    color: whitesmoke;
-    border-color: whitesmoke;
-}
-
-.inputField{
-    width: auto;
-    padding-left: 5vmin;
-    padding-right: 5vmin;
+a:hover{
+  color: rgb(98, 136, 238);
 }
 
 .mainFrame {
-    background-color:  rgba(144, 144, 144, 0.2);
-    padding: 3%;
-    border-radius: 30px;
-    padding: 3vmin;
-    margin-top: 3vmin;
 }
 
-.smallbutton {
-    font-size: 10pt;
-    border: solid #4F4F4F 1px;
-    border-radius: 20px;
-    padding-left: 10pt;
-    padding-right: 10pt;
-    text-align: center;
-    transition: all ease 0.5s;
+.error {
+  color: red;
 }
 
-#title {
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 2vmin;
+.success {
+  color: green;
+}
+
+input {
+  font-size: 1.3em;
+}
+
+.login-button {
+  width: 100%;
+  background-color: #00629B;
+  font-size: 1.4em;
 }
 
 #passerr{
-    margin-left: auto;
-    text-align: left;
-    font-size: 20pt;
+  font-size: 13pt;
+  font-weight: 100;
+  text-align: right;
 }
 
-#emailchange{
-    margin-top: 10pt;
+.login-card-content {
+  width: 80%;
 }
 
-#passChgConf{
-    font-size: 20pt;
-}
-
-.topbottomLine { 
-    border-top:#0d47a1 2px solid;
-    border-bottom: #0d47a1 2px solid;
-    vertical-align: middle;
-    align-content: center;
+.topbottomLine {
+  border-top:#0d47a1 2px solid;
+  border-bottom: #0d47a1 2px solid;
+  vertical-align: middle;
+  align-content: center;
 }
 
 .page-title {
-    color: #0d47a1;
-    font-size: 2.5em
-}
-
-.blue-font {
-    color : #0d47a1;
+  color: #0d47a1;
+  font-size: 2.5em
 }
 
 ::ng-deep .mat-focused .mat-form-field-label {
-    /*change color of label*/
-    color:  #0d47a1 !important;
-   }
-  
+  /*change color of label*/
+  color:  #0d47a1 !important;
+}
+
 ::ng-deep.mat-form-field-underline {
-/*change color of underline*/
-background-color:  #0d47a1 !important;
-} 
+  /*change color of underline*/
+  background-color:  #0d47a1 !important;
+}
 
 ::ng-deep.mat-form-field-ripple {
-/*change color of underline when focused*/
-background-color:  #0d47a1 !important;;
+  /*change color of underline when focused*/
+  background-color:  #0d47a1 !important;;
 }
